--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <div class="topbar">
-        
-
+      <div class="city">
+        <button class="citybtn">Select City:Surat </button>
+      </div>
+      <div class="lang"></div>
+      <div class="movtext"></div>
     </div>
   </body>
 </html>
