--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rnwmultimedia: Computer</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="topbar">
-      <div class="city">
-        <button class="citybtn">Select City:Surat </button>
-      </div>
-      <div class="lang"></div>
-      <div class="movtext"></div>
-    </div>
-  </body>
+        <div class="city">
+            <button class="citybtn">Select City:Surat </button>
+            <div class="dropdown">
+            <div class="dropdown-content">
+                <a href="#">Ahemdbad</a>
+                <a href="#">Rajkot</a>
+                <a href="#">Amreli</a>
+                <a href="#">Navsari </a>
+                <a href="#">Vidhyangar</a>
+                <a href="#">Bhavnagar</a>
+                <a href="#">Gandhinagar </a>
+                <a href="#">Bharuch</a>
+            </div>
+            </div>
+            <div class="lang"></div>
+            <div class="movtext"></div>
+        </div>
+</body>
+
 </html>
