--- a/index.html
+++ b/index.html
@@ -3,41 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rnwmultimedia: Computer</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
-
-  <body>
-    <div class="topbar">
-      <ul>
-        <li>
-          <div class="city">
-            <ul>
-              <li><button class="citybtn">Select city:SURAT</button></li>
-              <li><a href="#"> Ahemdabad </a></li>
-              <li><a href="#"> Mumbai </a></li>
-              <li></li>
-              <li><a href="#"> Delhi </a></li>
-              <li><a href="#"> Pune </a></li>
-              <li><a href="#"> Banglore </a></li>
-              <li><a href="#"> Chennai </a></li>
-            </ul>
-          </div>
-        </li>
-
-        <li>
-          <div class="lang">
-            <select name="" id="">
-              <option value="">hello</option>
-              <option value=""></option>
-            </select>
-          </div>
-        </li>
-        <li>
-          <div class="movtext"></div>
-        </li>
-      </ul>
-    </div>
-    asdasdfa
-  </body>
+  <body></body>
 </html>
