--- a/index.html
+++ b/index.html
@@ -3,7 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+      Rnwmultimedia: Computer Classes & Multimedia Training institute in Surat
+    </title>
   </head>
-  <body></body>
+  <body>
+    <div class="topbar">
+      <button>Selected City : Surat</button>
+      <ul style="display: none">
+        <li>ahemdabad</li>
+        <li>vadodra</li>
+        <li>bharuch</li>
+        <li>bharuch</li>
+        <li>bharuch</li>
+        <li>bharuch</li>
+        <li>bharuch</li>
+      </ul>
+      <select>
+        <option value="">Select Language</option>
+        <option value="ab">Abkhaz</option>
+        <option value="ace">Acehnese</option>
+        <option value="ach">Acholi</option>
+        <option value="aa">Afar</option>
+        <option value="af">Afrikaans</option>
+        <option value="sq">Albanian</option>
+        <option value="alz">Alur</option>
+        <option value="am">Amharic</option>
+        <option value="ar">Arabic</option>
+        <option value="hy">Armenian</option>
+        <option value="as">Assamese</option>
+        <option value="av">Avar</option>
+        <option value="awa">Awadhi</option>
+        <option value="ay">Aymara</option>
+        <option value="az">Azerbaijani</option>
+        <option value="ban">Balinese</option>
+      </select>
+      <marquee behavior="scrool" direction="left"
+        >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad magni
+        ipsum doloribus itaque blanditiis. Rerum iste consequatur quis est enim
+        expedita obcaecati quae quo nesciunt, maxime distinctio vel fuga
+        accusantium?</marquee
+      >
+    </div>
+  </body>
 </html>
