--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>
       Rnwmultimedia: Computer Classes & Multimedia Training institute in Surat
     </title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="topbar">
@@ -38,12 +39,14 @@
         <option value="az">Azerbaijani</option>
         <option value="ban">Balinese</option>
       </select>
-      <marquee behavior="scrool" direction="left"
-        >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad magni
-        ipsum doloribus itaque blanditiis. Rerum iste consequatur quis est enim
-        expedita obcaecati quae quo nesciunt, maxime distinctio vel fuga
-        accusantium?</marquee
-      >
+      <div class="moving">
+        <marquee behavior="scrool" direction="left"
+          >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad magni
+          ipsum doloribus itaque blanditiis. Rerum iste consequatur quis est
+          enim expedita obcaecati quae quo nesciunt, maxime distinctio vel fuga
+          accusantium?</marquee
+        >
+      </div>
     </div>
   </body>
 </html>
