--- a/index.html
+++ b/index.html
@@ -10,35 +10,37 @@
   </head>
   <body>
     <div class="topbar">
-      <button>Selected City : Surat</button>
-      <ul style="display: none">
-        <li>ahemdabad</li>
-        <li>vadodra</li>
-        <li>bharuch</li>
-        <li>bharuch</li>
-        <li>bharuch</li>
-        <li>bharuch</li>
-        <li>bharuch</li>
-      </ul>
-      <select>
-        <option value="">Select Language</option>
-        <option value="ab">Abkhaz</option>
-        <option value="ace">Acehnese</option>
-        <option value="ach">Acholi</option>
-        <option value="aa">Afar</option>
-        <option value="af">Afrikaans</option>
-        <option value="sq">Albanian</option>
-        <option value="alz">Alur</option>
-        <option value="am">Amharic</option>
-        <option value="ar">Arabic</option>
-        <option value="hy">Armenian</option>
-        <option value="as">Assamese</option>
-        <option value="av">Avar</option>
-        <option value="awa">Awadhi</option>
-        <option value="ay">Aymara</option>
-        <option value="az">Azerbaijani</option>
-        <option value="ban">Balinese</option>
-      </select>
+      <div class="opt">
+        <button>Selected City : Surat</button>
+        <ul style="display: none">
+          <li>ahemdabad</li>
+          <li>vadodra</li>
+          <li>bharuch</li>
+          <li>bharuch</li>
+          <li>bharuch</li>
+          <li>bharuch</li>
+          <li>bharuch</li>
+        </ul>
+        <select>
+          <option value="">Select Language</option>
+          <option value="ab">Abkhaz</option>
+          <option value="ace">Acehnese</option>
+          <option value="ach">Acholi</option>
+          <option value="aa">Afar</option>
+          <option value="af">Afrikaans</option>
+          <option value="sq">Albanian</option>
+          <option value="alz">Alur</option>
+          <option value="am">Amharic</option>
+          <option value="ar">Arabic</option>
+          <option value="hy">Armenian</option>
+          <option value="as">Assamese</option>
+          <option value="av">Avar</option>
+          <option value="awa">Awadhi</option>
+          <option value="ay">Aymara</option>
+          <option value="az">Azerbaijani</option>
+          <option value="ban">Balinese</option>
+        </select>
+      </div>
       <div class="moving">
         <marquee behavior="scrool" direction="left"
           >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad magni
@@ -48,5 +50,6 @@
         >
       </div>
     </div>
+    <div class="navbar"></div>
   </body>
 </html>
