--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
         >
       </div>
     </div>
-    <div class="navbar"></div>
+    <div class="navbar">
+      <left><img src="images/rnw-logo (Custom).png" alt="logo" /></left>
+      <div class="nav">
+        <ul>
+          <li><a>HOME</a></li>
+          <li>
+            <a>STD 10th & 12th</a
+            ><img src="images/chevron-down-solid.svg" alt="" srcset="" />
+          </li>
+          <li>Career Courses</li>
+          <li>Courses</li>
+          <li>About Us</li>
+          <li>Student Corner</li>
+          <li>Contact Us</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
