--- a/index.html
+++ b/index.html
@@ -56,14 +56,17 @@
         <ul>
           <li><a>HOME</a></li>
           <li>
-            <a>STD 10th & 12th</a
-            ><img src="images/chevron-down-solid.svg" alt="" srcset="" />
+            <a>STD 10th & 12th</a><img src="images/chevron-down-solid.svg" />
           </li>
-          <li>Career Courses</li>
-          <li>Courses</li>
-          <li>About Us</li>
-          <li>Student Corner</li>
-          <li>Contact Us</li>
+          <li>
+            <a>Carrer Courses</a><img src="images/chevron-down-solid.svg" />
+          </li>
+          <li><a>Courses</a><img src="images/chevron-down-solid.svg" /></li>
+          <li><a>About Us</a><img src="images/chevron-down-solid.svg" /></li>
+          <li>
+            <a>Student Corner</a><img src="images/chevron-down-solid.svg" />
+          </li>
+          <li><a>Contact Us</a></li>
         </ul>
       </div>
     </div>
