--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>
       Rnwmultimedia: Computer Classes & Multimedia Training institute in Surat
     </title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styless.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="topbar">
@@ -68,6 +69,18 @@
           </li>
           <li><a>Contact Us</a></li>
         </ul>
+      </div>
+    </div>
+    <div class="image-slider">
+      <div class="slider-inner">
+        <img src="https://picsum.photos/id/235/2000/700" alt="Image 1" />
+        <img src="https://picsum.photos/id/232/2000/700" alt="Image 2" />
+        <img src="https://picsum.photos/id/231/2000/700" alt="Image 3" />
+        <img src="https://picsum.photos/id/237/2000/700" alt="Image 4" />
+      </div>
+      <div class="slider-buttons">
+        <button class="prev-button"><</button>
+        <button class="next-button">></button>
       </div>
     </div>
   </body>
