--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <button class="next-button">></button>
       </div>
     </div>
+    <div class="counter"></div>
   </body>
   <script src="script.js"></script>
 </html>
