--- a/index.html
+++ b/index.html
@@ -82,7 +82,33 @@
         <button class="next-button">></button>
       </div>
     </div>
-    <div class="counter"></div>
+    <div class="stats-container">
+      <div class="stat-item">
+        <i class="fa fa-user"></i>
+        <p class="number" id="studentsTrained">0</p>
+        <p>Students Trained</p>
+      </div>
+      <div class="stat-item">
+        <i class="fa fa-book"></i>
+        <p class="number" id="approvedCourses">0</p>
+        <p>Approved Courses</p>
+      </div>
+      <div class="stat-item">
+        <i class="fa fa-briefcase"></i>
+        <p class="number" id="companyTieUps">0</p>
+        <p>Companies Tie-Ups</p>
+      </div>
+      <div class="stat-item">
+        <i class="fa fa-building"></i>
+        <p class="number" id="branches">0</p>
+        <p>Branches</p>
+      </div>
+      <div class="stat-item">
+        <i class="fa fa-certificate"></i>
+        <p class="number" id="certifications">0</p>
+        <p>Certification</p>
+      </div>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
