--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       Rnwmultimedia: Computer Classes & Multimedia Training institute in Surat
     </title>
     <link rel="stylesheet" href="styless.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <div class="topbar">
