--- a/index.html
+++ b/index.html
@@ -46,15 +46,22 @@
         <ul>
           <li><a>HOME</a></li>
           <li>
-            <a>STD 10th & 12th</a><img src="images/chevron-down-solid.svg" />
+            <a>STD 10th & 12th</a
+            ><i class="fa fa-chevron-down" aria-hidden="true"></i>
           </li>
           <li>
-            <a>Career Courses</a><img src="images/chevron-down-solid.svg" />
+            <a>Career Courses</a
+            ><i class="fa fa-chevron-down" aria-hidden="true"></i>
           </li>
-          <li><a>Courses</a><img src="images/chevron-down-solid.svg" /></li>
-          <li><a>About Us</a><img src="images/chevron-down-solid.svg" /></li>
           <li>
-            <a>Student Corner</a><img src="images/chevron-down-solid.svg" />
+            <a>Courses</a><i class="fa fa-chevron-down" aria-hidden="true"></i>
+          </li>
+          <li>
+            <a>About Us</a><i class="fa fa-chevron-down" aria-hidden="true"></i>
+          </li>
+          <li>
+            <a>Student Corner</a
+            ><i class="fa fa-chevron-down" aria-hidden="true"></i>
           </li>
           <li><a>Contact Us</a></li>
         </ul>
