--- a/index.html
+++ b/index.html
@@ -107,6 +107,68 @@
       </div>
     </div>
 
+    <div class="courses">
+      <h1 class="title">Pick The Right Course To Build Your Career</h1>
+
+      <!-- First Row of Courses -->
+      <div class="course-container">
+        <div class="course-row">
+          <div class="course-card">
+            <img src="web-design.png" alt="Web Designing" />
+            <h5>Web Designing</h5>
+          </div>
+          <div class="course-card">
+            <img src="ios-development.png" alt="iOS Development" />
+            <h5>iOS Development</h5>
+          </div>
+          <div class="course-card">
+            <img src="web-development.png" alt="Web Development" />
+            <h5>Web Development</h5>
+          </div>
+          <div class="course-card">
+            <img src="android-development.png" alt="Android Development" />
+            <h5>Android Development</h5>
+          </div>
+          <div class="course-card">
+            <img src="animation.png" alt="Animation" />
+            <h5>Animation</h5>
+          </div>
+          <div class="course-card">
+            <img src="ai-data-science.png" alt="AI & Data Science" />
+            <h5>AI & Data Science</h5>
+          </div>
+        </div>
+
+        <!-- Second Row of Courses -->
+        <div class="course-row">
+          <div class="course-card">
+            <img src="game-design.png" alt="Game Design & Development" />
+            <h5>Game Design & Development</h5>
+          </div>
+          <div class="course-card">
+            <img src="full-stack.png" alt="Full Stack Development" />
+            <h5>Full Stack Development</h5>
+          </div>
+          <div class="course-card">
+            <img src="ui-ux.png" alt="UI-UX & Graphics Design" />
+            <h5>UI-UX & Graphics Design</h5>
+          </div>
+          <div class="course-card">
+            <img src="poster-design.png" alt="Poster Design" />
+            <h5>Poster Design</h5>
+          </div>
+          <div class="course-card">
+            <img src="cyber-security.png" alt="Cyber Security" />
+            <h5>Cyber Security</h5>
+          </div>
+          <div class="course-card">
+            <img src="ita-cs.png" alt="ITA-CS+" />
+            <h5>ITA-CS+</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
