--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
           <option value="ach">Acholi</option>
           <option value="aa">Afar</option>
           <option value="af">Afrikaans</option>
-          <!-- Add more languages as needed -->
         </select>
       </div>
       <div class="moving">
@@ -110,59 +109,93 @@
     <div class="courses">
       <h1 class="title">Pick The Right Course To Build Your Career</h1>
 
-      <!-- First Row of Courses -->
       <div class="course-container">
         <div class="course-row">
           <div class="course-card">
-            <img src="web-design.png" alt="Web Designing" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/1.png"
+              alt="Web Designing"
+            />
             <h5>Web Designing</h5>
           </div>
           <div class="course-card">
-            <img src="ios-development.png" alt="iOS Development" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/2.png"
+              alt="iOS Development"
+            />
             <h5>iOS Development</h5>
           </div>
           <div class="course-card">
-            <img src="web-development.png" alt="Web Development" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/3.png"
+              alt="Web Development"
+            />
             <h5>Web Development</h5>
           </div>
           <div class="course-card">
-            <img src="android-development.png" alt="Android Development" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/4.png"
+              alt="Android Development"
+            />
             <h5>Android Development</h5>
           </div>
           <div class="course-card">
-            <img src="animation.png" alt="Animation" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/5.png"
+              alt="Animation"
+            />
             <h5>Animation</h5>
           </div>
           <div class="course-card">
-            <img src="ai-data-science.png" alt="AI & Data Science" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/6.png"
+              alt="AI & Data Science"
+            />
             <h5>AI & Data Science</h5>
           </div>
         </div>
 
-        <!-- Second Row of Courses -->
         <div class="course-row">
           <div class="course-card">
-            <img src="game-design.png" alt="Game Design & Development" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/7.png"
+              alt="Game Design & Development"
+            />
             <h5>Game Design & Development</h5>
           </div>
           <div class="course-card">
-            <img src="full-stack.png" alt="Full Stack Development" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/8.png"
+              alt="Full Stack Development"
+            />
             <h5>Full Stack Development</h5>
           </div>
           <div class="course-card">
-            <img src="ui-ux.png" alt="UI-UX & Graphics Design" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/9.png"
+              alt="UI-UX & Graphics Design"
+            />
             <h5>UI-UX & Graphics Design</h5>
           </div>
           <div class="course-card">
-            <img src="poster-design.png" alt="Poster Design" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/design.png"
+              alt="Poster Design"
+            />
             <h5>Poster Design</h5>
           </div>
           <div class="course-card">
-            <img src="cyber-security.png" alt="Cyber Security" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/hacker.png"
+              alt="Cyber Security"
+            />
             <h5>Cyber Security</h5>
           </div>
           <div class="course-card">
-            <img src="ita-cs.png" alt="ITA-CS+" />
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/course/hacker.png"
+              alt="ITA-CS+"
+            />
             <h5>ITA-CS+</h5>
           </div>
         </div>
