--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     </title>
     <link rel="stylesheet" href="styless.css" />
     <link
+      rel="shortcut icon"
+      href="https://www.rnwmultimedia.edu.in/images/rnw-favicon.jpg"
+      type="image/x-icon"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
