another section mentor and trust done

--- a/index.html
+++ b/index.html
@@ -206,6 +206,118 @@
         </div>
       </div>
     </div>
+    <div class="mentor-container">
+      <div
+        class="profile-card"
+        style="background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png')"
+      >
+        <div class="black">
+          <h2 class="profile-font">Mr. Alok Kumar</h2>
+          <span class="profile-description"
+            >Director UX @ Myntra <br />
+            Ex Walmart, Microsoft, Vedantu, BlueStone</span
+          >
+          <span class="profile-description">Mentor: UI/UX</span>
+          <div class="profile-manu-icon">
+            <a href="https://in.linkedin.com/in/cuaalok"
+              ><img src="https://www.rnwmultimedia.edu.in/images/in.png" alt="LinkedIn"/></a>
+            <a href="https://twitter.com/alokmp2003"
+              ><img src="https://www.rnwmultimedia.edu.in/images/x.png" alt="Twitter"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="profile-card"
+        style="background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png')"
+      >
+        <div class="black">
+          <h2 class="profile-font">Mr. Piyush Jinjala</h2>
+          <span class="profile-description"
+            >Compositor at The Embassy Vancouver, British Columbia, Canada</span
+          >
+          <span class="profile-description">Mentor: Animation</span>
+          <div class="profile-manu-icon">
+            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/in.png" alt="LinkedIn" /></a>
+            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/x.png" alt="Twitter" /></a>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="profile-card"
+        style="background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png')"
+      >
+        <div class="black">
+          <h2 class="profile-font">Mr. Jemish Lakhani</h2>
+          <span class="profile-description"
+            >Founder & CEO of XQUADS Tech Pvt Ltd</span
+          >
+          <span class="profile-description"
+            >Mentor: Game Design & Development</span
+          >
+          <div class="profile-manu-icon">
+            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/in.png" alt="LinkedIn" /></a>
+            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/x.png" alt="Twitter" /></a>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="profile-card"
+        style="background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png')"
+      >
+        <div class="black">
+          <h2 class="profile-font">Mr. Mohit Rajput</h2>
+          <span class="profile-description"
+            >Professional Bollywood Movie Poster Designer</span
+          >
+          <span class="profile-description">Mentor: Graphic Design</span>
+          <div class="profile-manu-icon">
+            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/in.png" alt="LinkedIn" /></a>
+            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/x.png" alt="Twitter" /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="trust-section">
+      <div class="trust-image">
+        <a href="https://youtu.be/_DYPZYuimGk" target="_blank" rel="nofollow">
+          <img
+            src="https://www.rnwmultimedia.edu.in/assets/img/photos/5-pillers.jfif"
+            alt="Trust Image"
+          />
+        </a>
+      </div>
+      <div class="trust-section">
+        <div class="trust-image">
+            <a href="https://youtu.be/_DYPZYuimGk" target="_blank" rel="nofollow">
+                <img src="https://www.rnwmultimedia.edu.in/assets/img/photos/5-pillers.jfif" alt="Trust Image">
+            </a>
+        </div>
+        <div class="trust-content">
+            <h3 class="trust-title"><span class="theme-color">Legacy</span> of <span class="theme-color">100% Trust</span> with Students & Parents</h3>
+            <p>All types of IT & Multimedia technology-oriented knowledge-providing organizations means Red & White, where all the syllabus are developed on a research basis. Some of the benefits to study in Red & White...</p>
+            <br/>
+            <br/>
+            <div class="trust-list">
+                <ul>
+                    <li><i class="fas fa-check"></i>100% field Oriented Training.</li>
+                    <li><i class="fas fa-check"></i>Courses according to the international approach.</li>
+                    <li><i class="fas fa-check"></i>25% Scholarship to an orphan student.</li>
+                    <li><i class="fas fa-check"></i>"Growth Mindset" Culture</li>
+                    <li><i class="fas fa-check"></i>Company Visit</li>
+                    <li><i class="fas fa-check"></i>Multiple Training Center</li>
+                </ul>
+                <ul>
+                    <li><i class="fas fa-check"></i>International collaborations like Google ATC Authorised Testing Center and ISO Approved.</li>
+                    <li><i class="fas fa-check"></i>A wonderful campus where education is a perfect combination of humour with knowledge and personality development.</li>
+                    <li><i class="fas fa-check"></i>Day & Events Celebration</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
