--- a/index.html
+++ b/index.html
@@ -209,7 +209,9 @@
     <div class="mentor-container">
       <div
         class="profile-card"
-        style="background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png')"
+        style="
+          background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png');
+        "
       >
         <div class="black">
           <h2 class="profile-font">Mr. Alok Kumar</h2>
@@ -220,9 +222,14 @@
           <span class="profile-description">Mentor: UI/UX</span>
           <div class="profile-manu-icon">
             <a href="https://in.linkedin.com/in/cuaalok"
-              ><img src="https://www.rnwmultimedia.edu.in/images/in.png" alt="LinkedIn"/></a>
+              ><img
+                src="https://www.rnwmultimedia.edu.in/images/in.png"
+                alt="LinkedIn"
+            /></a>
             <a href="https://twitter.com/alokmp2003"
-              ><img src="https://www.rnwmultimedia.edu.in/images/x.png" alt="Twitter"
+              ><img
+                src="https://www.rnwmultimedia.edu.in/images/x.png"
+                alt="Twitter"
             /></a>
           </div>
         </div>
@@ -230,7 +237,9 @@
 
       <div
         class="profile-card"
-        style="background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png')"
+        style="
+          background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png');
+        "
       >
         <div class="black">
           <h2 class="profile-font">Mr. Piyush Jinjala</h2>
@@ -239,15 +248,25 @@
           >
           <span class="profile-description">Mentor: Animation</span>
           <div class="profile-manu-icon">
-            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/in.png" alt="LinkedIn" /></a>
-            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/x.png" alt="Twitter" /></a>
+            <a href="#"
+              ><img
+                src="https://www.rnwmultimedia.edu.in/images/in.png"
+                alt="LinkedIn"
+            /></a>
+            <a href="#"
+              ><img
+                src="https://www.rnwmultimedia.edu.in/images/x.png"
+                alt="Twitter"
+            /></a>
           </div>
         </div>
       </div>
 
       <div
         class="profile-card"
-        style="background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png')"
+        style="
+          background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png');
+        "
       >
         <div class="black">
           <h2 class="profile-font">Mr. Jemish Lakhani</h2>
@@ -258,15 +277,25 @@
             >Mentor: Game Design & Development</span
           >
           <div class="profile-manu-icon">
-            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/in.png" alt="LinkedIn" /></a>
-            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/x.png" alt="Twitter" /></a>
+            <a href="#"
+              ><img
+                src="https://www.rnwmultimedia.edu.in/images/in.png"
+                alt="LinkedIn"
+            /></a>
+            <a href="#"
+              ><img
+                src="https://www.rnwmultimedia.edu.in/images/x.png"
+                alt="Twitter"
+            /></a>
           </div>
         </div>
       </div>
 
       <div
         class="profile-card"
-        style="background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png')"
+        style="
+          background-image: url('https://www.rnwmultimedia.edu.in/images/image1.png');
+        "
       >
         <div class="black">
           <h2 class="profile-font">Mr. Mohit Rajput</h2>
@@ -275,8 +304,16 @@
           >
           <span class="profile-description">Mentor: Graphic Design</span>
           <div class="profile-manu-icon">
-            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/in.png" alt="LinkedIn" /></a>
-            <a href="#"><img src="https://www.rnwmultimedia.edu.in/images/x.png" alt="Twitter" /></a>
+            <a href="#"
+              ><img
+                src="https://www.rnwmultimedia.edu.in/images/in.png"
+                alt="LinkedIn"
+            /></a>
+            <a href="#"
+              ><img
+                src="https://www.rnwmultimedia.edu.in/images/x.png"
+                alt="Twitter"
+            /></a>
           </div>
         </div>
       </div>
@@ -292,33 +329,107 @@
       </div>
       <div class="trust-section">
         <div class="trust-image">
-            <a href="https://youtu.be/_DYPZYuimGk" target="_blank" rel="nofollow">
-                <img src="https://www.rnwmultimedia.edu.in/assets/img/photos/5-pillers.jfif" alt="Trust Image">
-            </a>
+          <a href="https://youtu.be/_DYPZYuimGk" target="_blank" rel="nofollow">
+            <img
+              src="https://www.rnwmultimedia.edu.in/assets/img/photos/5-pillers.jfif"
+              alt="Trust Image"
+            />
+          </a>
         </div>
         <div class="trust-content">
-            <h3 class="trust-title"><span class="theme-color">Legacy</span> of <span class="theme-color">100% Trust</span> with Students & Parents</h3>
-            <p>All types of IT & Multimedia technology-oriented knowledge-providing organizations means Red & White, where all the syllabus are developed on a research basis. Some of the benefits to study in Red & White...</p>
-            <br/>
-            <br/>
-            <div class="trust-list">
-                <ul>
-                    <li><i class="fas fa-check"></i>100% field Oriented Training.</li>
-                    <li><i class="fas fa-check"></i>Courses according to the international approach.</li>
-                    <li><i class="fas fa-check"></i>25% Scholarship to an orphan student.</li>
-                    <li><i class="fas fa-check"></i>"Growth Mindset" Culture</li>
-                    <li><i class="fas fa-check"></i>Company Visit</li>
-                    <li><i class="fas fa-check"></i>Multiple Training Center</li>
-                </ul>
-                <ul>
-                    <li><i class="fas fa-check"></i>International collaborations like Google ATC Authorised Testing Center and ISO Approved.</li>
-                    <li><i class="fas fa-check"></i>A wonderful campus where education is a perfect combination of humour with knowledge and personality development.</li>
-                    <li><i class="fas fa-check"></i>Day & Events Celebration</li>
-                </ul>
-            </div>
+          <h3 class="trust-title">
+            <span class="theme-color">Legacy</span> of
+            <span class="theme-color">100% Trust</span> with Students & Parents
+          </h3>
+          <p>
+            All types of IT & Multimedia technology-oriented knowledge-providing
+            organizations means Red & White, where all the syllabus are
+            developed on a research basis. Some of the benefits to study in Red
+            & White...
+          </p>
+          <br />
+          <br />
+          <div class="trust-list">
+            <ul>
+              <li><i class="fas fa-check"></i>100% field Oriented Training.</li>
+              <li>
+                <i class="fas fa-check"></i>Courses according to the
+                international approach.
+              </li>
+              <li>
+                <i class="fas fa-check"></i>25% Scholarship to an orphan
+                student.
+              </li>
+              <li><i class="fas fa-check"></i>"Growth Mindset" Culture</li>
+              <li><i class="fas fa-check"></i>Company Visit</li>
+              <li><i class="fas fa-check"></i>Multiple Training Center</li>
+            </ul>
+            <ul>
+              <li>
+                <i class="fas fa-check"></i>International collaborations like
+                Google ATC Authorised Testing Center and ISO Approved.
+              </li>
+              <li>
+                <i class="fas fa-check"></i>A wonderful campus where education
+                is a perfect combination of humour with knowledge and
+                personality development.
+              </li>
+              <li><i class="fas fa-check"></i>Day & Events Celebration</li>
+            </ul>
+          </div>
         </div>
+      </div>
     </div>
+    <div class="course-container">
+      <div class="content-wrapper">
+        <div class="text-content">
+          <h2 class="headline-small">
+            Gujarat #1 Web Design Course Training Institute
+          </h2>
+          <h2 class="headline-large">Red And White Multimedia Education</h2>
+          <p class="description">
+            Red and White Multimedia Education is one of the best
+            <a
+              href="https://www.rnwmultimedia.edu.in/web-design-course-surat.php"
+              >Web Design Training Institute in Surat</a
+            >
+            having advanced Web design course modules. Students who are taking
+            web design classes from us are extremely satisfied. Here are a few
+            reasons why students prefer us.
+          </p>
+          <ul class="benefits-list">
+            <li>Certified Course</li>
+            <li>Industry Oriented Training</li>
+            <li>Job Support</li>
+            <li>Multiple Placement Partners</li>
+            <li>Multiple Various Events</li>
+            <li>Trusted by more than 2000+ Institutes</li>
+            <li>Multiple Training Centers</li>
+            <li>World Class Infrastructure</li>
+          </ul>
+          <button class="apply-btn">Apply Now</button>
+        </div>
 
+        <div class="video-content">
+          <div class="mac-screen">
+            <img
+              src="images/mac-screen.png"
+              alt="mac-screen"
+              class="mac-image"
+            />
+            <div class="video-overlay">
+              <iframe
+                width="100%"
+                height="100%"
+                src="https://www.youtube.com/embed/HEUCs224my4"
+                title="YouTube video player"
+                frameborder="0"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
